2.0.2
=======
- Avoid empty comments (<!---->) not being propery recognized.


2.0.1
=======
- Avoid aggressive auto-closing of head elements inside script or template-related tags.


2.0.0
=======
- Refactored all handler interfaces so that event handling methods now return a result object capable of
  giving information or instructions back to the parser (e.g. disabling parser for #CDATA sections).


1.4.0
=======
- Added capability to disable parsing inside elements which contents should not be processed at all,
  e.g. <script> and <style> tags in HTML, which are CDATA and not PCDATA, and should allow markup significant
  characters in their contents (<,>,&,"). The whole contents of these elements are reported as a Text node.
- Improved library metadata in META-INF/MANIFEST.MF and added OSGi metadata.


1.3
=======
- Fixed bug reading buffer when read() operations don't return all the available bytes just because they
  are not ready (e.g. a pipe).
- Added to MarkupParser the possibility to split Text nodes (call several Text events in sequence).


1.2
=======
- Added event-based tracing atto handlers.
- Added Object-based tracing event system.


1.1
=======
- Added new events to handlers for automatically balancing tags, by creating synthetic closing elements.
- Added new "noUnbalancedCloseElements" restriction to DocumentRestrictions. This allows unbalanced
  open tags, but not unbalanced close tags (as happens in HTML).


1.0
=======

- First release of attoparser